Fixed problem with KCI where not all independence facts were given p-values. Replaced use of EigenvalueDecomposition with SingularValueDecomposition.